...
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/trade_amount"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_weight="0.25"
...
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/trade_from"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            android:text="from"
            android:textSize="18sp"
            tools:layout_editor_absoluteX="190dp"
...
            android:layout_weight="0.25"
            app:srcCompat="@drawable/trade_gain"
            tools:layout_editor_absoluteX="147dp"
            tools:layout_editor_absoluteY="109dp" />

        <TextView
            android:id="@+id/trade_to"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".25"
            android:text="from"
            android:textAlignment="center"
            android:textSize="18sp"
...
