<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/action_map"
        android:title="Map"
        android:icon="@drawable/ic_coin_point" />


    <item android:id="@+id/action_wallet"
        android:title="Wallet"
        android:icon="@drawable/ic_wallet" />

    <item android:id="@+id/action_bank"
        android:title="Bank"
        android:icon="@drawable/ic_bank" />

    <item android:id="@+id/action_community"
        android:title="Community"
        android:icon="@drawable/ic_community" />
</menu>